--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flame: ^1.34.0
+  sensors_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
