--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,11 @@ environment:
   sdk: ^3.10.1
 
 dependencies:
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.21.3+1
+  heart_bpm: ^2.0.0+0
 
 dev_dependencies:
   flutter_test:
