--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flame: ^1.34.0
   heart_bpm: ^2.0.0+0
   sensors_plus: ^7.0.0
+  supabase_flutter: ^2.10.3
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +26,5 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/
