--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   sensors_plus: ^7.0.0
   supabase_flutter: ^2.10.3
   flutter_dotenv: ^6.0.0
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
